results/SpecGenBench/4-shot/log-DominantIndex-2023_11_05_00_51_04.txt
class DominantIndex {
    
    //@ requires nums != null;
    //@ ensures \result >= -1 && \result < nums.length;
    //@ ensures (\forall int i; 0 <= i && i < nums.length; nums[\result] >= nums[i] * 2);
    public int dominantIndex(int[] nums) {
        int m1 = -1, m2 = -1;
        int index = -1;

        //@ maintaining (\forall int i; 0 <= i && i < nums.length; nums[index] >= nums[i] * 2);
        //@ maintaining 0 <= index && index <= nums.length;
        //@ decreases nums.length - index;
        for (int i = 0; i < nums.length; i++) {
            if (nums[i] > m1) {
                m2 = m1;
                m1 = nums[i];
                index = i;
            } else if (nums[i] > m2) {
                m2 = nums[i];
            }
        }

        return m1 >= m2 * 2 ? index : -1;
    }
}
/home/max/Documents/JMLGPT/tmp/DominantIndex.java:10: error: variable i is already defined in method dominantIndex(int[])
        //@ maintaining (\forall int i; 0 <= i && i < nums.length; nums[index] >= nums[i] * 2);
                                     ^
1 error

